# opencv-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  template.cpp
