cmake_minimum_required(VERSION 2.8)
project(template)

find_package(OpenCV REQUIRED)

add_definitions("-std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")

add_executable(template template.cpp)
target_link_libraries(template ${OpenCV_LIBS})
install(TARGETS template RUNTIME DESTINATION bin)
